2004-03-28  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smsc/smsc_cimd2.c: applied in a slightly modified version that
      set the DLR Msg's sms->msgdata value to the statuscode if there is
      no USER_DATA available. Thanks to Nicholas Rahn <nicholas.rahn@mnc.ch>.
      [Msg-Id: <1080286173.6498.46.camel@frisbee.mnc.ch>].

2004-03-27  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smsc/smpp_pdu.[ch], gw/smsc/smpp_pdu.def, gw/smsc/smpp_pdu_opt.def:
      applied patch with new version of optional params handling in smpp pdu.
      With this version Dict* is killed and all opt. params are treated the
      same as mandatory and could be easier accessed. Now pack/unpack for int 
      values works too.
      Note: not available in pdu opt. params are initialized with '-1' for int,
      NULL for nulterminated/octet strings.
      [Msg-Id: <200403231506.31479.a.malysh@centrium.de>].

2004-03-22  Alexander Malysh  <a.malysh@centrium.de> 
    * test/test_dbpool.c: applied missind part of last commit.
      Thanks again to "Robert Galach" <kanelek (at) tenbit.pl>.

2004-03-20  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/dlr_oracle.c, gwlib/dbpool.[ch], gwlib/dbpool_oracle.c,
      gwlib/dbpool_p.h: applied db_pool_binding_variables_2.patch provided
      by "Robert Galach" <kanelek (at) tenbit.pl> that enables binding variable
      in sql statements and contains implementation for oracle.
      [Msg-Id: <01bb01c407a7$26623640$320da8c0@tenbit.com>].

2004-03-17  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smsc/smsc_sema.[ch]: fixed annoying compiler warning. Changed
      msgbody from (void**) to (void*). I don't know why in hell (void**)
      was needed?

2004-03-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smsc/smsc_smpp.c: applied patch that removes unneeded setting
      of online time to -1. Thanks to Nisan Bloch <nisof@amagoblin.co.za>.
      [Msg-Id: <6.0.0.22.0.20040311193716.03189a90@amagoblin.ialien.co.za>]
