@@ -1,3 +1,9 @@
+2004-04-18  Alexander Malysh  <a.malysh@centrium.de> 
+    * gw/smsbox.c: applied patch enhances the log and output messages
+      when gw/smsbox.c encounters a message without a recipient field.
+      Thanks to Guillaume Cottenceau <guillaume.cottenceau@mnc.ch>.
+      [Msg-Id: <84k70guv6v.fsf@frozen.mnc.ch>].
+
 2004-03-28  Alexander Malysh  <a.malysh@centrium.de> 
     * gw/smsc/smsc_cimd2.c: applied in a slightly modified version that
       set the DLR Msg's sms->msgdata value to the statuscode if there is
